# MPPatch-Fem-sFix

./: .gitignore  README.md  RELEASE_NOTES.md  build.sbt  changelog.txt
.github/workflows/: build_dist.yml
docs/: code-signing.md
project/: .gitignore  LuaJITBuild.scala  NativePatchBuild.scala  PatchBuild.scala  Utils.scala
scripts/: build-cli-native-image.ps1  build-femsfix.sh  build-natives-wsl2.sh  setup-wsl2.sh  test-patch.ps1
scripts/ci/: build-ni_linux.sh  build-win32-wrapper.sh
scripts/native-image-config/cli/: reflect-config.json  resource-config.json
scripts/native-image-config/win32/: resource-config.json
scripts/python/: build-lua51-forwarder.py  build-win32-wrapper.py  extract-version-info.py  gen-cleaned-def.py  gen-forwarder-def.py  gen-wrapper-asm-from-def.py
src/main/scala/moe/lymia/mppatch/cli/: CliConfig.scala  CliJsonProtocol.scala  MPPatchCLI.scala
src/main/scala/moe/lymia/mppatch/ui/: MPPatchInstaller.scala
src/patch/mppatch-core/: Cargo.toml  rust-toolchain.toml
src/patch/mppatch-core/.cargo/: config.toml  config.toml.bak
src/patch/mppatch-core/src/: hook_lua.rs  hook_netpatch.rs  hook_proxy.rs  lib.rs  rt_init.rs  rt_linking.rs  rt_patch.rs
src/patch/static/: civ5_win32_steam.json
src/patch/static/ui/hooks/frontend/mainmenu/: mainmenu_resetpatch.lua  mainmenu_status.lua
src/patch/static/ui/hooks/frontend/modsmenu/: modsbrowser_forcereload.lua  multiplayerselect_keepmods.lua
src/patch/static/ui/lib/: mppatch_mtutils.lua  mppatch_runtime.lua
src/patch/stub/: stdout_test.txt  test_minimal.c
(+2 files in other folders)
